# sbe-gradle-plugin

./: README.md  build.gradle
examples/cpp/header-encode-decode/: CMakeLists.txt
examples/cpp/header-encode-decode/src/: main.cpp
src/main/groovy/vontikov/: Const.groovy  SbeGeneratorPlugin.groovy  SbeGeneratorPluginExtension.groovy  Util.groovy
src/test/groovy/vontikov/: PluginTest.groovy
src/test/resources/projects/generator/: build.gradle
